NetBSD Problem Report #48496

From www@NetBSD.org  Sat Jan  4 01:01:25 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 8143CA61B7
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  4 Jan 2014 01:01:25 +0000 (UTC)
Message-Id: <20140104010123.B7506A646B@mollari.NetBSD.org>
Date: Sat,  4 Jan 2014 01:01:23 +0000 (UTC)
From: nathanialsloss@yahoo.com.au
Reply-To: nathanialsloss@yahoo.com.au
To: gnats-bugs@NetBSD.org
Subject: uhub.c - usbd_new_device needs to be retried as many as 5 times for touch screen controller on Panasonic Toughbook CF19 mk5
X-Send-Pr-Version: www-1.0

>Number:         48496
>Category:       kern
>Synopsis:       uhub.c - usbd_new_device needs to be retried as many as 5 times for touch screen controller on Panasonic Toughbook CF19 mk5
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jan 04 01:05:00 +0000 2014
>Closed-Date:    Mon Jun 02 01:36:00 +0000 2014
>Last-Modified:  Mon Jun 02 01:36:00 +0000 2014
>Originator:     Nat Sloss
>Release:        NetBSD 6.1.1
>Organization:
>Environment:
NetBSD beast 6.1.1_PATCH NetBSD 6.1.1_PATCH (C3TEST) #0: Thu Jan  2 10:54:36 EST 2014  build@microrusty:/usr/src/sys/arch/i386/compile/obj/C3TEST i386
>Description:
The touch screen controller on the Panasonic Toughbook CF19 mk5 is erratic.  Sometimes it will attach first go but most often it wont and the port is disabled.

I found that retrying usbd_new_device up to 5 times fixes the problem.  

I don't know if the same results are obtained on an amd64 kernel I am still running an i386 kernel.
>How-To-Repeat:
Refer to above.
>Fix:
Apply this patch which retries usbd_new_device at most 8 times:

Index: sys/dev/usb/uhub.c
===================================================================
RCS file: /cvsroot/src/sys/dev/usb/uhub.c,v
retrieving revision 1.114.10.1
diff -u -r1.114.10.1 uhub.c
--- sys/dev/usb/uhub.c	19 Mar 2012 23:13:59 -0000	1.114.10.1
+++ sys/dev/usb/uhub.c	3 Jan 2014 23:55:31 -0000
@@ -544,6 +544,8 @@
 		else
 			speed = USB_SPEED_FULL;
 		/* Get device info and set its address. */
+		int new_device_tries = 8;
+newdev_retry:		
 		err = usbd_new_device(sc->sc_dev, dev->bus,
 			  dev->depth + 1, speed, port, up);
 		/* XXX retry a few times? */
@@ -553,6 +555,16 @@
 			/* Avoid addressing problems by disabling. */
 			/* usbd_reset_port(dev, port, &up->status); */

+			/* The touch screen controller on the Panasonic Toughbook CF19 - Mk 5
+			 * responds to new device erratically sometimes in as many as 5
+			 * attempts.
+			 */
+			if (new_device_tries > 0) {
+				new_device_tries--;
+				delay(200);
+				goto newdev_retry;
+			}
+
 			/*
 			 * The unit refused to accept a new address, or had
 			 * some other serious problem.  Since we cannot leave

NB: This patch is my own work which I submit under the NetBSD license.

Regards,

Nat.

>Release-Note:

>Audit-Trail:
From: Nick Hudson <nick.hudson@gmx.co.uk>
To: gnats-bugs@NetBSD.org, kern-bug-people@netbsd.org, 
 gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Cc: 
Subject: Re: kern/48496: uhub.c - usbd_new_device needs to be retried as many
 as 5 times for touch screen controller on Panasonic Toughbook CF19 mk5
Date: Sat, 04 Jan 2014 11:24:11 +0000

 On 04/01/2014 01:05, nathanialsloss@yahoo.com.au wrote:
 >> Number:         48496
 >> Category:       kern
 >> Synopsis:       uhub.c - usbd_new_device needs to be retried as many as 5 times for touch screen controller on Panasonic Toughbook CF19 mk5
 >> Confidential:   no
 >> Severity:       serious
 >> Priority:       medium
 >> Responsible:    kern-bug-people
 >> State:          open
 >> Class:          sw-bug
 >> Submitter-Id:   net
 >> Arrival-Date:   Sat Jan 04 01:05:00 +0000 2014
 >> Originator:     Nat Sloss
 >> Release:        NetBSD 6.1.1
 >> Organization:
 >> Environment:
 > NetBSD beast 6.1.1_PATCH NetBSD 6.1.1_PATCH (C3TEST) #0: Thu Jan  2 10:54:36 EST 2014  build@microrusty:/usr/src/sys/arch/i386/compile/obj/C3TEST i386
 >> Description:
 > The touch screen controller on the Panasonic Toughbook CF19 mk5 is erratic.  Sometimes it will attach first go but most often it wont and the port is disabled.

 Can you post a full dmesg please? Also, what is the output of

      ident /netbsd | egrep [eu]hci.c

 There have been recent fixes to these drivers which might help here.

 Thanks,
 Nick

From: Nat Sloss <nathanialsloss@yahoo.com.au>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/48496: uhub.c - usbd_new_device needs to be retried as many as 5 times for touch screen controller on Panasonic Toughbook CF19 mk5
Date: Sat, 4 Jan 2014 23:53:42 +1100

 Hi,

 Here is the requested information:

 ident /netbsd | egrep [eu]hci.c
      $NetBSD: ehci.c,v 1.183 2011/12/23 00:51:43 jakllsch Exp $
      $NetBSD: ehci_cardbus.c,v 1.31 2011/08/01 11:20:27 drochner Exp $
      $NetBSD: gcscehci.c,v 1.9 2011/07/01 17:37:26 dyoung Exp $
      $NetBSD: uhci.c,v 1.242 2011/12/23 00:51:46 jakllsch Exp $
      $NetBSD: uhci_cardbus.c,v 1.20 2011/08/01 11:20:28 drochner Exp $

 dmesg:
 NetBSD 6.1.1_PATCH (C3TEST) #0: Thu Jan  2 10:54:36 EST 2014

 build@microrusty:/home/build/NetBSD-6.1_source_tree/usr/src/sys/arch/i386/compile/obj/C3TEST
 total memory = 3984 MB
 avail memory = 3901 MB
 timecounter: Timecounters tick every 10.000 msec
 timecounter: Timecounter "i8254" frequency 1193182 Hz quality 100
 Panasonic Corporation CF-19AMNL7PA (005)
 mainbus0 (root)
 ACPI Warning: 32/64X FACS address mismatch in FADT - 
 0xCAFD4E40/0x00000000CAFD4D40, using 32 (20110623/tbfadt-517)
 cpu0 at mainbus0 apid 0: Intel(R) Core(TM) i5-2520M CPU @ 2.50GHz, id 
 0x206a7
 cpu1 at mainbus0 apid 2: Intel(R) Core(TM) i5-2520M CPU @ 2.50GHz, id 
 0x206a7
 ioapic0 at mainbus0 apid 2: pa 0xfec00000, version 20, 24 pins
 acpi0 at mainbus0: Intel ACPICA 20110623
 acpi0: X/RSDT: OemId <MATBIO,CF19-5  ,06222004>, AslId <MSFT,00010013>
 acpi0: SCI interrupting at int 9
 timecounter: Timecounter "ACPI-Safe" frequency 3579545 Hz quality 900
 hpet0 at acpi0: high precision event timer (mem 0xfed00000-0xfed00400)
 timecounter: Timecounter "hpet0" frequency 14318180 Hz quality 2000
 acpiec0 at acpi0 (EC0, PNP0C09): io 0x62,0x66
 OPRM (PNP0C02) at acpi0 not configured
 npx0 at acpi0 (MATH, PNP0C04): io 0xf0 irq 13
 npx0: reported by CPUID; using exception 16
 LDRC (PNP0C02) at acpi0 not configured
 attimer0 at acpi0 (TIMR, PNP0100): io 0x40-0x43,0x50-0x53 irq 0
 CWDT (INT3F0D) at acpi0 not configured
 pckbc0 at acpi0 (PS2K, PNP0303) (kbd port): io 0x60,0x64 irq 1
 pckbc1 at acpi0 (PS2M, FJC6001) (aux port): irq 12
 SIOR (PNP0C02) at acpi0 not configured
 com0 at acpi0 (UAR1, PNP0501-0): io 0x3f8-0x3ff irq 4
 com0: ns16550a, working fifo
 com1 at acpi0 (UAR2, PNP0501-2): io 0x2f8-0x2ff irq 3
 com1: ns16550a, working fifo
 com2 at acpi0 (UAR3, PNP0501-10): io 0x3e8-0x3ef irq 7
 com2: ns16550a, working fifo
 TPM (IFX0102) at acpi0 not configured
 TSK1 (INT3403) at acpi0 not configured
 TSK2 (INT3403) at acpi0 not configured
 acpivga0 at acpi0 (GFX0): ACPI Display Adapter
 acpiout0 at acpivga0 (DD01, 0x0100): ACPI Display Output Device
 acpiout1 at acpivga0 (DD02, 0x0400): ACPI Display Output Device
 acpiout1: brightness levels: 0 5 10 15 20 25 30 35 40 45 50 55 60 65 70 75 80 
 85 90 95 100
 acpiout2 at acpivga0 (DD03, 0x0300): ACPI Display Output Device
 acpiout3 at acpivga0 (DD04, 0x0301): ACPI Display Output Device
 acpiout4 at acpivga0 (DD05, 0x0302): ACPI Display Output Device
 acpiout5 at acpivga0 (DD06, 0x0303): ACPI Display Output Device
 acpiout6 at acpivga0 (DD07, 0x0304): ACPI Display Output Device
 acpiout7 at acpivga0 (DD08, 0x0305): ACPI Display Output Device
 acpivga0: unknown output device acpiout0
 acpivga0: unknown output device acpiout2
 acpivga0: unknown output device acpiout3
 acpivga0: unknown output device acpiout4
 acpivga0: unknown output device acpiout5
 acpivga0: unknown output device acpiout6
 acpivga0: unknown output device acpiout7
 acpivga0: connected output devices:
 acpivga0:   0x0400 (acpiout1): Unknown Output Device, head 0
 PDRC (PNP0C02) at acpi0 not configured
 TMEM (INT3402) at acpi0 not configured
 BEXA (PNP0C02) at acpi0 not configured
 MEM2 (PNP0C01) at acpi0 not configured
 MISC (MAT0021) at acpi0 not configured
 panasonic0 at acpi0 (HKEY, MAT0019): Panasonic Hotkeys
 acpiacad0 at acpi0 (AC, ACPI0003-0): ACPI AC Adapter
 acpibat0 at acpi0 (BAT1, PNP0C0A-0): ACPI Battery
 acpibat0: Panasonic LION rechargeable battery
 acpibat0: granularity: low->warn 0.010 Wh, warn->full 0.010 Wh
 acpilid0 at acpi0 (LID, PNP0C0D-0): ACPI Lid Switch
 acpibut0 at acpi0 (PWRB, PNP0C0C-0): ACPI Power Button
 toughbook_hbtn0 at acpi0 (TBTN, MAT0020): Toughbook tablet buttons
 DDRC (PNP0C02) at acpi0 not configured
 DPPM (INT3400) at acpi0 not configured
 acpitz0 at acpi0 (TZ00)
 acpitz0: levels: critical 105.0 C, passive cooling
 acpitz1 at acpi0 (TZ01): cpu0 cpu1
 acpitz1: levels: critical 130.0 C, passive 80.0 C, passive cooling
 apm0 at acpi0: Power Management spec V1.2
 pckbd0 at pckbc0 (kbd slot)
 pckbc0: using irq 1 for kbd slot
 wskbd0 at pckbd0: console keyboard
 pms0 at pckbc0 (aux slot)
 pckbc0: using irq 12 for aux slot
 wsmouse0 at pms0 mux 0
 pci0 at mainbus0 bus 0: configuration mode 1
 pci0: i/o space, memory space enabled, rd/line, rd/mult, wr/inv ok
 pchb0 at pci0 dev 0 function 0: vendor 0x8086 product 0x0104 (rev. 0x09)
 genfb0 at pci0 dev 2 function 0: vendor 0x8086 product 0x0126 (rev. 0x09)
 genfb0: framebuffer at 0xd0000000, size 1024x768, depth 32, stride 4096
 WARNING: splash_render: not initialized
 wsdisplay0 at genfb0 kbdmux 1: console (default, vt100 emulation), using 
 wskbd0
 wsmux1: connecting to wsdisplay0
 drm at genfb0 not configured
 vendor 0x8086 product 0x0103 (miscellaneous DASP, revision 0x09) at pci0 
 dev 4 function 0 not configured
 vendor 0x8086 product 0x1c3a (miscellaneous communications, revision 0x04) 
 at pci0 dev 22 function 0 not configured
 puc0 at pci0 dev 22 function 3: Intel 6 Series KT (com)
 com3 at puc0 port 0: interrupting at ioapic0 pin 19
 com3: ns16550a, working fifo
 wm0 at pci0 dev 25 function 0: PCH2 LAN (82579LM) Controller (rev. 0x04)
 wm0: interrupting at ioapic0 pin 20
 wm0: PCI-Express bus
 wm0: FLASH
 wm0: Ethernet address 70:58:12:27:e5:bf
 ihphy0 at wm0 phy 2: i82579 10/100/1000 media interface, rev. 3
 ihphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 
 1000baseT-FDX, auto
 ehci0 at pci0 dev 26 function 0: vendor 0x8086 product 0x1c2d (rev. 0x04)
 ehci0: interrupting at ioapic0 pin 16
 ehci0: BIOS has given up ownership
 ehci0: EHCI version 1.0
 usb0 at ehci0: USB revision 2.0
 hdaudio0 at pci0 dev 27 function 0: HD Audio Controller
 hdaudio0: interrupting at ioapic0 pin 22
 hdafg0 at hdaudio0: Realtek ALC269
 hdafg0: DAC00 2ch: Speaker [Built-In], HP Out [Jack]
 hdafg0: ADC01 2ch: Mic In [Jack]
 hdafg0: 2ch/2ch 44100Hz 48000Hz 96000Hz 192000Hz PCM16 PCM20 PCM24 
 AC3
 audio0 at hdafg0: full duplex, playback, capture, independent
 hdvsmfg at hdaudio0 not configured
 ppb0 at pci0 dev 28 function 0: vendor 0x8086 product 0x1c10 (rev. 0xb4)
 ppb0: PCI Express 2.0 <Root Port of PCI-E Root Complex>
 pci1 at ppb0 bus 1
 pci1: i/o space, memory space enabled, rd/line, wr/inv ok
 ppb1 at pci0 dev 28 function 2: vendor 0x8086 product 0x1c14 (rev. 0xb4)
 ppb1: PCI Express 2.0 <Root Port of PCI-E Root Complex>
 pci2 at ppb1 bus 9
 pci2: i/o space, memory space enabled, rd/line, wr/inv ok
 iwn0 at pci2 dev 0 function 0: vendor 0x8086 product 0x0082 (rev. 0x34)
 iwn0: interrupting at ioapic0 pin 18
 iwn0: MIMO 2T2R, MoW, address 08:11:96:27:51:f4
 iwn0: 11a rates: 6Mbps 9Mbps 12Mbps 18Mbps 24Mbps 36Mbps 48Mbps 
 54Mbps
 iwn0: 11b rates: 1Mbps 2Mbps 5.5Mbps 11Mbps
 iwn0: 11g rates: 1Mbps 2Mbps 5.5Mbps 11Mbps 6Mbps 9Mbps 12Mbps 18Mbps 
 24Mbps 36Mbps 48Mbps 54Mbps
 ppb2 at pci0 dev 28 function 3: vendor 0x8086 product 0x2448 (rev. 0xb4)
 ppb2: PCI Express 2.0 <Root Port of PCI-E Root Complex>
 pci3 at ppb2 bus 10
 pci3: i/o space, memory space enabled, rd/line, wr/inv ok
 cbb0 at pci3 dev 0 function 0: vendor 0x1180 product 0xe476 (rev. 0x02)
 sdhc0 at pci3 dev 0 function 1: vendor 0x1180 product 0xe823 (rev. 0x00)
 sdhc0: interrupting at ioapic0 pin 16
 sdhc0: SD Host Specification 3.0, rev.5
 sdmmc0 at sdhc0
 fwohci0 at pci3 dev 0 function 4: vendor 0x1180 product 0xe832 (rev. 0x03)
 fwohci0: interrupting at ioapic0 pin 17
 fwohci0: OHCI version 1.0 (ROM=0)
 fwohci0: No. of Isochronous channels is 4.
 fwohci0: EUI64 89:45:80:00:3b:8a:1b:00
 fwohci0: Phy 1394a available S400, 1 ports.
 fwohci0: Link S400, max_rec 2048 bytes.
 ieee1394if0 at fwohci0: IEEE1394 bus
 fwip0 at ieee1394if0: IP over IEEE1394
 fwohci0: Initiate bus reset
 cbb0: cacheline 0x0 lattimer 0x0
 cbb0: bhlc 0x820000
 cbb0: interrupting at ioapic0 pin 19
 cardslot0 at cbb0
 cardbus0 at cardslot0: bus 11
 pcmcia0 at cardslot0
 ehci1 at pci0 dev 29 function 0: vendor 0x8086 product 0x1c26 (rev. 0x04)
 ehci1: interrupting at ioapic0 pin 23
 ehci1: BIOS has given up ownership
 ehci1: EHCI version 1.0
 usb1 at ehci1: USB revision 2.0
 ichlpcib0 at pci0 dev 31 function 0: vendor 0x8086 product 0x1c4f (rev. 0x04)
 timecounter: Timecounter "ichlpcib0" frequency 3579545 Hz quality 1000
 ichlpcib0: 24-bit timer
 ichlpcib0: TCO (watchdog) timer configured.
 ichlpcib0: can't map general purpose i/o space
 ahcisata0 at pci0 dev 31 function 2: vendor 0x8086 product 0x1c03 (rev. 0x04)
 ahcisata0: interrupting at ioapic0 pin 19
 ahcisata0: AHCI revision 1.30, 6 ports, 32 slots, CAP 
 0xef30ff45<EMS,PSC,SSC,PMD,ISS=0x3=Gen3,SCLO,SAL,SALP,SSS,SSNTF,SNCQ,S64A>
 atabus0 at ahcisata0 channel 0
 ichsmb0 at pci0 dev 31 function 3: vendor 0x8086 product 0x1c22 (rev. 0x04)
 ichsmb0: interrupting at ioapic0 pin 18
 iic0 at ichsmb0: I2C bus
 vendor 0x8086 product 0x1c24 (miscellaneous DASP, revision 0x04) at pci0 
 dev 31 function 6 not configured
 isa0 at ichlpcib0
 pcppi0 at isa0 port 0x61
 midi0 at pcppi0: PC speaker
 spkr0 at pcppi0
 sysbeep0 at pcppi0
 attimer0: attached to pcppi0
 acpicpu0 at cpu0: ACPI CPU
 acpicpu0: failed to evaluate _TSS: AE_LIMIT
 acpicpu0: C1: FFH, lat   1 us, pow  1000 mW
 acpicpu0: C2: FFH, lat 104 us, pow   350 mW
 acpicpu0: P0: FFH, lat  10 us, pow 35000 mW, 2500 MHz
 acpicpu0: P1: FFH, lat  10 us, pow 26426 mW, 2000 MHz
 acpicpu0: P2: FFH, lat  10 us, pow 23233 mW, 1800 MHz
 acpicpu0: P3: FFH, lat  10 us, pow 20164 mW, 1600 MHz
 acpicpu0: P4: FFH, lat  10 us, pow 17226 mW, 1400 MHz
 acpicpu0: P5: FFH, lat  10 us, pow 14408 mW, 1200 MHz
 acpicpu0: P6: FFH, lat  10 us, pow 11713 mW, 1000 MHz
 acpicpu0: P7: FFH, lat  10 us, pow  9140 mW,  800 MHz
 acpicpu0: T0: I/O, lat   1 us, pow     0 mW, 100 %
 acpicpu0: T1: I/O, lat   1 us, pow     0 mW,  88 %
 acpicpu0: T2: I/O, lat   1 us, pow     0 mW,  76 %
 acpicpu0: T3: I/O, lat   1 us, pow     0 mW,  64 %
 acpicpu0: T4: I/O, lat   1 us, pow     0 mW,  52 %
 acpicpu0: T5: I/O, lat   1 us, pow     0 mW,  40 %
 acpicpu0: T6: I/O, lat   1 us, pow     0 mW,  28 %
 acpicpu0: T7: I/O, lat   1 us, pow     0 mW,  16 %
 coretemp0 at cpu0: thermal sensor, 1 C resolution
 acpicpu1 at cpu1: ACPI CPU
 acpicpu1: failed to evaluate _TSS: AE_LIMIT
 coretemp1 at cpu1: thermal sensor, 1 C resolution
 fwohci0: BUS reset
 fwohci0: node_id=0xc800ffc0, gen=1, CYCLEMASTER mode
 ieee1394if0: 1 nodes, maxhop <= 0 cable IRM irm(0) (me)
 ieee1394if0: bus manager 0
 timecounter: Timecounter "clockinterrupt" frequency 100 Hz quality 0
 timecounter: Timecounter "TSC" frequency 2494487000 Hz quality 3000
 acpiacad0: AC adapter online.
 IPsec: Initialized Security Association Processing.
 uhub0 at usb0: vendor 0x8086 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
 uhub0: 3 ports with 3 removable, self powered
 uhub1 at usb1: vendor 0x8086 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
 uhub1: 3 ports with 3 removable, self powered
 ahcisata0 port 0: device present, speed: 3.0Gb/s
 wd0 at atabus0 drive 0
 wd0: <ST9750420AS>
 wd0: drive supports 16-sector PIO transfers, LBA48 addressing
 wd0: 698 GB, 1453521 cyl, 16 head, 63 sec, 512 bytes/sect x 1465149168 
 sectors
 wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133)
 wd0(ahcisata0:0:0): using PIO mode 4, DMA mode 2, Ultra-DMA mode 6 
 (Ultra/133) (using DMA)
 uhub2 at uhub1 port 1: vendor 0x8087 product 0x0024, class 9/0, rev 
 2.00/0.00, addr 2
 uhub2: single transaction translator
 uhub3 at uhub0 port 1: vendor 0x8087 product 0x0024, class 9/0, rev 
 2.00/0.00, addr 2
 uhub3: single transaction translator
 uhub3: 6 ports with 6 removable, self powered
 uhub2: 8 ports with 8 removable, self powered
 ugen0 at uhub3 port 1
 ugen0: UPEK Biometric Coprocessor, rev 1.01/0.02, addr 3
 umodem0 at uhub3 port 2 configuration 1 interface 1
 umodem0: Ericsson F5521gw, rev 2.00/0.00, addr 4, iclass 2/2
 umodem0: data interface 2, has CM over data, has break
 umodem0: status change notification available
 ucom0 at umodem0
 umodem1 at uhub3 port 2 configuration 1 interface 3
 umodem1: Ericsson F5521gw, rev 2.00/0.00, addr 4, iclass 2/2
 umodem1: data interface 4, has CM over data, has break
 umodem1: status change notification available
 ucom1 at umodem1
 umodem2 at uhub3 port 2 configuration 1 interface 9
 umodem2: Ericsson F5521gw, rev 2.00/0.00, addr 4, iclass 2/2
 umodem2: data interface 10, has CM over data, has break
 umodem2: status change notification available
 ucom2 at umodem2
 ubt0 at uhub3 port 6
 ubt0: ALPS UGNZA, rev 2.00/52.76, addr 5
 uhidev0 at uhub2 port 6 configuration 1 interface 0
 uhidev0: Fujitsu Component USB Touch Panel, rev 1.10/10.02, addr 3, iclass 3/1
 ums0 at uhidev0: 3 buttons
 wsmouse1 at ums0 mux 0
 Kernelized RAIDframe activated
 pad0: outputs: 44100Hz, 16-bit, stereo
 audio1 at pad0: full duplex, playback, capture
 pad1: outputs: 44100Hz, 16-bit, stereo
 audio2 at pad1: full duplex, playback, capture
 boot device: wd0
 root on wd0a dumps on wd0b
 root file system type: ffs
 wsdisplay0: screen 1 added (default, vt100 emulation)
 wsdisplay0: screen 2 added (default, vt100 emulation)
 wsdisplay0: screen 3 added (default, vt100 emulation)
 wsdisplay0: screen 4 added (default, vt100 emulation)

 >  There have been recent fixes to these drivers which might help here.

 I will try a kernel from current from sources as of today and see if it is 
 fixed.

 Thanks.

 Regards,

 Nat.


From: Nat Sloss <nathanialsloss@yahoo.com.au>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/48496: uhub.c - usbd_new_device needs to be retried as many as 5 times for touch screen controller on Panasonic Toughbook CF19 mk5
Date: Mon, 6 Jan 2014 14:00:05 +1100

 Hi,

 I tried a kernel from current from sources as of yesterday and I could not 
 fault it.  The touch screen controller attached first time and every time.

 I updated my NetBSD 6.1 source directory and now have files as follows:

 	$NetBSD: ehci.c,v 1.183.8.1 2013/09/26 01:57:22 riz Exp $
      $NetBSD: ehci_cardbus.c,v 1.31 2011/08/01 11:20:27 drochner Exp $
      $NetBSD: ehci_pci.c,v 1.54.2.1 2012/10/01 17:37:28 riz Exp $
      $NetBSD: gcscehci.c,v 1.9 2011/07/01 17:37:26 dyoung Exp $
      $NetBSD: uhci.c,v 1.242.8.1 2013/09/26 01:57:22 riz Exp $
      $NetBSD: uhci_cardbus.c,v 1.20 2011/08/01 11:20:28 drochner Exp $
      $NetBSD: uhci_pci.c,v 1.54 2012/01/30 19:41:23 drochner Exp $

 However I still have the same problem in NetBSD 6.1x.

 Is there a chance that NetBSD-6 will be pulled up with the changes from 
 current?

 Regards,

 Nat.

From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: Nat Sloss <nathanialsloss@yahoo.com.au>, kern-bug-people@netbsd.org, 
 gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: kern/48496: uhub.c - usbd_new_device needs to be retried as many
 as 5 times for touch screen controller on Panasonic Toughbook CF19 mk5
Date: Tue, 14 Jan 2014 10:37:59 +0000

 On 01/06/14 03:00, Nat Sloss wrote:
 > The following reply was made to PR kern/48496; it has been noted by GNATS.
 >
 > From: Nat Sloss <nathanialsloss@yahoo.com.au>
 > To: gnats-bugs@netbsd.org
 > Cc:
 > Subject: Re: kern/48496: uhub.c - usbd_new_device needs to be retried as many as 5 times for touch screen controller on Panasonic Toughbook CF19 mk5
 > Date: Mon, 6 Jan 2014 14:00:05 +1100
 >
 >   Hi,
 >   
 >   I tried a kernel from current from sources as of yesterday and I could not
 >   fault it.  The touch screen controller attached first time and every time.
 >   
 >   I updated my NetBSD 6.1 source directory and now have files as follows:
 >   
 >   	$NetBSD: ehci.c,v 1.183.8.1 2013/09/26 01:57:22 riz Exp $
 >        $NetBSD: ehci_cardbus.c,v 1.31 2011/08/01 11:20:27 drochner Exp $
 >        $NetBSD: ehci_pci.c,v 1.54.2.1 2012/10/01 17:37:28 riz Exp $
 >        $NetBSD: gcscehci.c,v 1.9 2011/07/01 17:37:26 dyoung Exp $
 >        $NetBSD: uhci.c,v 1.242.8.1 2013/09/26 01:57:22 riz Exp $
 >        $NetBSD: uhci_cardbus.c,v 1.20 2011/08/01 11:20:28 drochner Exp $
 >        $NetBSD: uhci_pci.c,v 1.54 2012/01/30 19:41:23 drochner Exp $
 >   
 >   However I still have the same problem in NetBSD 6.1x.
 >   
 >   Is there a chance that NetBSD-6 will be pulled up with the changes from
 >   current?

 Can you try applying the following changes to you netbsd-6 tree and test

 https://mail-index.netbsd.org/source-changes/2013/03/20/msg042367.html

 https://mail-index.netbsd.org/source-changes/2013/09/07/msg047245.html

 >   
 >   Regards,
 >   
 >   Nat.
 >   
 >
 Thanks,
 Nick

From: Nat Sloss <nathanialsloss@yahoo.com.au>
To: Nick Hudson <skrll@netbsd.org>
Cc: "gnats-bugs" <gnats-bugs@netbsd.org>
Subject: Re: kern/48496: uhub.c - usbd_new_device needs to be retried as many as 5 times for touch screen controller on Panasonic Toughbook CF19 mk5
Date: Tue, 14 Jan 2014 23:31:23 +1100

 Hi,
 > Can you try applying the following changes to you netbsd-6 tree and test
 > 
 > https://mail-index.netbsd.org/source-changes/2013/03/20/msg042367.html
 > 
 > https://mail-index.netbsd.org/source-changes/2013/09/07/msg047245.html
 > 
 I applied the patches and tested it over twenty reboots.

 It worked every time.

 > Thanks,
 > Nick

 Many thanks,

 Regards,

 Nat.

From: "Stephen Borrill" <sborrill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48496 CVS commit: [netbsd-6] src/sys/dev/usb
Date: Fri, 7 Feb 2014 11:33:34 +0000

 Module Name:	src
 Committed By:	sborrill
 Date:		Fri Feb  7 11:33:34 UTC 2014

 Modified Files:
 	src/sys/dev/usb [netbsd-6]: usb_subr.c

 Log Message:
 Pull up the following revisions(s) (requested by skrll in ticket #1015):
 	sys/dev/usb/usb_subr.c:	revision 1.190, 1.192

 Fix PR/48496. Only set wMaxPacketSize to 64 for HS/FS and set to 8 for LS to be within
 the USB spec.
 Reload the full device descriptor after re-establishing the default pipe
 with the new address.


 To generate a diff of this commit:
 cvs rdiff -u -r1.180 -r1.180.8.1 src/sys/dev/usb/usb_subr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 02 Jun 2014 01:36:00 +0000
State-Changed-Why:
pulled up - if there's more that hasn't been handled, write in and i'll
reopen.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.