Pull up the following revisions(s) (requested by skrll in ticket #1015): 	sys/dev/usb/usb_subr.c:	revision 1.190, 1.192

Fix PR/48496. Only set wMaxPacketSize to 64 for HS/FS and set to 8 for LS to be within
the USB spec.
Reload the full device descriptor after re-establishing the default pipe
with the new address.